--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,6 +14,6 @@
     "declarationMap": true,
     "sourceMap": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "index.d.ts"],
   "exclude": ["backend/node_modules", "dist"]
 }
